<resources>
    <string name="NavigationBarMoreButton">more</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort">Abort</string>
    <string name="accept_draw_offer">Accept</string>
    <string name="account_purchase_restore_hint">Already purchased something not shown correctly? Click here to restore purchases.</string>
    <string name="account_purchases_no_auto_renew_hint">(Our subscriptions are not auto-renewed)</string>
    <string name="account_restore_button_text">Restore</string>
    <string name="account_type">Account type</string>
    <string name="account_type_message_for_web_premium_users">Your Web Premium account already includes mobile. The packages below are for the Mobile Premium account only!</string>
    <string name="account_type_mobile_premium_account_expires_date_headline">Your current subscription runs until:</string>
    <string name="account_type_web_premium_account_headline">Your current subscription is:</string>
    <string name="account_type_web_premium_account_name">Web Premium account</string>
    <string name="acitivity_label_log_in">Log in</string>
    <string name="activity_registration_label">chess24 registration</string>
    <string name="activity_setup_board">Board setup</string>
    <string name="activity_tactics_session_overview">Tactics session overview</string>
    <string name="activity_tactics_trainer">Tactics Trainer</string>
    <string name="after_registration_header">Welcome to chess24</string>
    <string name="after_registration_text_1">You can now fully enjoy the features of our website/app.</string>
    <string name="after_registration_text_3">"Don't forget to complete your profile."</string>
    <string name="after_regsitration_button_text">Start your journey</string>
    <string name="after_regsitration_text_2">"Feel free to play, read, learn and watch. There's a lot more to experience."</string>
    <string name="analyse_autoplay_pause">Stop</string>
    <string name="analyse_autoplay_play">Autoplay</string>
    <string name="analyse_menu_bar_engine">Engine</string>
    <string name="analyse_menu_bar_info">Info</string>
    <string name="analyse_menu_bar_notation">Moves</string>
    <string name="analyse_menu_bar_reset_to_starting_position">Reset</string>
    <string name="analyse_menu_bar_set_up">Setup</string>
    <string name="analyse_menu_bar_switch_sides">Flip</string>
    <string name="analyse_menu_bar_tree">Tree</string>
    <string name="analysis_edit_game_black">Black</string>
    <string name="analysis_edit_game_country_black">Black Country</string>
    <string name="analysis_edit_game_country_white">White Country</string>
    <string name="analysis_edit_game_date">Date</string>
    <string name="analysis_edit_game_event">Event</string>
    <string name="analysis_edit_game_rating_black">Black Rating</string>
    <string name="analysis_edit_game_rating_white">White Rating</string>
    <string name="analysis_edit_game_result">Result</string>
    <string name="analysis_edit_game_site">Site</string>
    <string name="analysis_edit_game_title">Title</string>
    <string name="analysis_edit_game_white">White</string>
    <string name="analysis_edit_gameinfo">Edit</string>
    <string name="analysis_saved_in_my_analyses">Saved in My analysis</string>
    <string name="analytics_settings_title">Google Analytics</string>
    <string name="analyze_engine_paused">paused</string>
    <string name="analyze_engine_start">start</string>
    <string name="analyze_engine_stop">stop</string>
    <string name="analyze_movelist_delete_move">delete</string>
    <string name="analyze_movelist_promotemove">promote</string>
    <string name="analyze_opening_tree_no_information">No opening information available</string>
    <string name="analyze_subnavbar_delete_move_no">No</string>
    <string name="analyze_subnavbar_delete_move_yes">Yes</string>
    <string name="analyzse_edit_game_information_header">Edit information</string>
    <string name="api_expires_popup_app_not_supported_anymore_text">Your version of the app is no longer supported - please update!</string>
    <string name="api_expires_popup_app_only_supported_for_x_more_days">Your version of the app will only be supported for %1.s more days - please update!</string>
    <string name="api_expires_popup_cancel_button_text">Cancel</string>
    <string name="api_expires_popup_title">Please update!</string>
    <string name="api_expires_popup_update_button_text">Update</string>
    <string name="app_id">381403181941949</string>
    <string name="app_name">chess24</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout.ScrollingViewBehavior</string>
    <string name="benefit_full_analysis_description">Become a Mobile Premium member and unleash all the analysis mode features, with more engine lines and greater depth in the opening tree</string>
    <string name="benefit_full_analysis_header">Full analysis</string>
    <string name="benefit_unlimited_database_description">Save as much of your own analysis as you want</string>
    <string name="benefit_unlimited_database_header">Unlimited database</string>
    <string name="benefit_unlimited_tactic_excercises_description">As a Mobile Premium member you can solve as many tactics puzzles as you like on your mobile device!</string>
    <string name="benefit_unlimited_tactic_excercises_header">Unlimited tactics puzzles</string>
    <string name="best_move_for_black">Black to move</string>
    <string name="best_move_for_white">White to move</string>
    <string name="board_settings_arrows_description">Display an arrow showing the last move</string>
    <string name="board_settings_arrows_title">Arrows</string>
    <string name="board_settings_sounds_description">Play sounds when a move is made or a piece is taken</string>
    <string name="board_settings_sounds_title">Sounds</string>
    <string name="board_settings_squares_description">Highlight the squares a piece can move to</string>
    <string name="board_settings_squares_title">Squares</string>
    <string name="board_settings_theme_title">Theme</string>
    <string name="board_settings_title">Board</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="broacast_info_current_round">"current
round"</string>
    <string name="broadcast_game_view_fragment_title">Live game</string>
    <string name="broadcast_info_finished_games">"finished
games"</string>
    <string name="broadcast_info_ongoing_games">"ongoing
games"</string>
    <string name="broadcast_language">en</string>
    <string name="broadcast_player_profile_performance">Performance</string>
    <string name="broadcast_player_profile_points_games">Points / Games</string>
    <string name="broadcast_player_profile_rating">Rating</string>
    <string name="broadcast_player_profile_rating_diff">Rating +/-</string>
    <string name="change_password_popup_confirm_password_field">confirm new password</string>
    <string name="change_password_popup_current_password_field">current password</string>
    <string name="change_password_popup_new_password_field">new password</string>
    <string name="profile_editor_hint_birthdate">Date of birth</string>
    <string name="profile_editor_hint_country">Country</string>
    <string name="profile_editor_hint_email">Email</string>
    <string name="profile_editor_hint_first_name">First name</string>
    <string name="profile_editor_hint_password">Password</string>
    <string name="profile_editor_hint_sex">Sex</string>
    <string name="profile_editor_hint_surname">Surname</string>
    <string name="profile_editor_hint_username">Username</string>
    <string name="profile_editor_section_title_about_me">About me</string>
    <string name="profile_editor_section_title_account_type">Account type</string>
    <string name="profile_editor_section_title_general">General</string>
    <string name="profile_editor_section_title_privacy">Privacy</string>
    <string name="profile_register_widget_benefit_analysis">Deeper analysis</string>
    <string name="profile_register_widget_benefit_playzone">Unlimited Playzone games</string>
    <string name="profile_register_widget_benefit_profile">Your own profile and rating</string>
    <string name="profile_register_widget_benefit_tactics">More Tactics Trainer puzzles</string>
    <string name="profile_register_widget_create_your_account">Create your account</string>
    <string name="profile_register_widget_intro_text">"Don't miss out! Sign up for chess24 mobile to unlock"</string>
    <string name="profile_register_widget_title">Free registration</string>
    <string name="register_terms_and_conditions">"By clicking 'Register' you agree to our"<u> terms and conditions</u> and confirm you have read our<u> privacy policy</u>.</string>
    <string name="registration_button_facebook">Log in with Facebook</string>
    <string name="registration_button_register">Register</string>
    <string name="registration_email">Email</string>
    <string name="registration_password">Password</string>
    <string name="registration_password_confirmation">Password confirmation</string>
    <string name="registration_username">Username</string>
    <string name="setup_board_black_long_castling">Black 0-0-0</string>
    <string name="setup_board_black_short_castling">Black 0-0</string>
    <string name="setup_board_menu_bar_active_color">side to move</string>
    <string name="setup_board_menu_bar_castling">castling</string>
    <string name="setup_board_menu_bar_clear_board">clear</string>
    <string name="setup_board_menu_bar_en_passant">en passant</string>
    <string name="setup_board_menu_bar_reset_starting_position">reset</string>
    <string name="setup_board_white_long_castling">White 0-0-0</string>
    <string name="setup_board_white_short_castling">White 0-0</string>
</resources>