<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <de.cisha.android.ui.patterns.text.CustomTextView android:ellipsize="end" android:id="@id/profile_your_games_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/profile_register_widget_title" android:maxLines="1" app:textstyle="widget_title" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/profile_register_widget_bg" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <de.cisha.android.ui.patterns.text.CustomTextView android:textColor="#ffffffff" android:ellipsize="end" android:gravity="center" android:id="@id/profile_your_games_all_games_played_descr_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_register_widget_intro_text" app:textstyle="teaser_intro" />
        <de.cisha.android.ui.patterns.text.CustomTextView android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_register_widget_benefit_playzone" app:textstyle="list_item_white_sometslab" style="@style/profile_widget_list_item" />
        <de.cisha.android.ui.patterns.text.CustomTextView android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_register_widget_benefit_tactics" app:textstyle="list_item_white_sometslab" style="@style/profile_widget_list_item" />
        <de.cisha.android.ui.patterns.text.CustomTextView android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_register_widget_benefit_analysis" app:textstyle="list_item_white_sometslab" style="@style/profile_widget_list_item" />
        <de.cisha.android.ui.patterns.text.CustomTextView android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_register_widget_benefit_profile" app:textstyle="list_item_white_sometslab" style="@style/profile_widget_list_item" />
    </LinearLayout>
    <de.cisha.android.ui.patterns.buttons.CustomButtonAlternative android:layout_gravity="center_horizontal" android:id="@id/profile_register_widget_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/profile_register_widget_create_your_account" />
</LinearLayout>