<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <de.cisha.android.ui.patterns.text.CustomTextView android:textColor="#ffffffff" android:ellipsize="end" android:gravity="center_horizontal" android:id="@id/registration_facebook_button" android:background="@drawable/registration_facebook_background" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="10.0dip" android:text="@string/registration_button_facebook" android:maxLines="1" android:drawableLeft="@drawable/registration_facebook_logo" app:textstyle="text_bold" />
    <de.cisha.android.ui.patterns.input.CustomEditText android:id="@id/registration_form_nickname" android:layout_width="fill_parent" android:layout_height="wrap_content" app:hintText="@string/registration_username" style="@style/CustomInputStyle" />
    <de.cisha.android.ui.patterns.input.CustomEditText android:id="@id/registration_form_email" android:layout_width="fill_parent" android:layout_height="wrap_content" app:hintText="@string/registration_email" style="@style/CustomInputStyle" />
    <de.cisha.android.ui.patterns.input.CustomEditPassword android:id="@id/registration_form_password" android:layout_width="fill_parent" android:layout_height="wrap_content" app:hintText="@string/registration_password" style="@style/CustomInputStyle" />
    <de.cisha.android.ui.patterns.input.CustomEditPassword android:id="@id/registration_form_password_confirmation" android:layout_width="fill_parent" android:layout_height="wrap_content" app:hintText="@string/registration_password_confirmation" style="@style/CustomInputStyle" />
    <de.cisha.android.ui.patterns.text.CustomTextView android:textColor="#ffffffff" android:ellipsize="end" android:id="@id/registration_form_error_text" android:background="@drawable/registration_error_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:maxLines="5" app:textstyle="text_small" />
    <de.cisha.android.ui.patterns.text.CustomTextView android:textColor="@color/registration_text_color" android:gravity="center_horizontal" android:id="@id/registration_privacy_policy_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="12.0dip" android:text="@string/register_terms_and_conditions" app:textstyle="text_small" />
    <de.cisha.android.ui.patterns.buttons.CustomButtonAlternative android:gravity="center" android:id="@id/registration_form_confirm_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/registration_button_register" />
</LinearLayout>