<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:custom="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <de.cisha.android.ui.patterns.text.CustomTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile_editor_section_title_general" android:drawableLeft="@drawable/profile_editor_ico_general" custom:textstyle="list_item_title" style="@style/profile_editior_header_view_style" />
        <de.cisha.android.ui.patterns.input.CustomEditText android:id="@id/profile_editor_username" custom:hintText="@string/profile_editor_hint_username" style="@style/CustomInputStyle" />
        <de.cisha.android.ui.patterns.input.CustomEditText android:id="@id/profile_editor_firstname" custom:hintText="@string/profile_editor_hint_first_name" style="@style/CustomInputStyle" />
        <de.cisha.android.ui.patterns.input.CustomEditText android:id="@id/profile_editor_surname" custom:hintText="@string/profile_editor_hint_surname" style="@style/CustomInputStyle" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip">
            <de.cisha.android.ui.patterns.input.CustomEditText android:id="@id/profile_editor_email" custom:hintText="@string/profile_editor_hint_email" style="@style/CustomInputStyle" />
            <View android:id="@id/profile_editor_email_click_overlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignLeft="@id/profile_editor_email" android:layout_alignTop="@id/profile_editor_email" android:layout_alignRight="@id/profile_editor_email" android:layout_alignBottom="@id/profile_editor_email" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip">
            <de.cisha.android.ui.patterns.input.CustomEditPassword android:id="@id/profile_editor_password" custom:hintText="@string/profile_editor_hint_password" style="@style/CustomInputStyle" />
            <View android:id="@id/profile_editor_password_click_overlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignLeft="@id/profile_editor_password" android:layout_alignTop="@id/profile_editor_password" android:layout_alignRight="@id/profile_editor_password" android:layout_alignBottom="@id/profile_editor_password" />
        </RelativeLayout>
        <de.cisha.android.ui.patterns.text.CustomTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile_editor_section_title_about_me" android:drawableLeft="@drawable/profile_editor_ico_aboutme" custom:textstyle="list_item_title" style="@style/profile_editior_header_view_style" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip">
            <de.cisha.android.board.profile.view.CustomCountryChoser android:id="@id/profile_editor_country" custom:hintText="@string/profile_editor_hint_country" style="@style/CustomInputStyle" />
            <View android:id="@id/profile_editor_country_click_overlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignLeft="@id/profile_editor_country" android:layout_alignTop="@id/profile_editor_country" android:layout_alignRight="@id/profile_editor_country" android:layout_alignBottom="@id/profile_editor_country" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip">
            <de.cisha.android.ui.patterns.input.CustomEditDate android:id="@id/profile_editor_birthdate" custom:hintText="@string/profile_editor_hint_birthdate" style="@style/CustomInputStyle" />
            <View android:id="@id/profile_editor_birthday_click_overlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignLeft="@id/profile_editor_birthdate" android:layout_alignTop="@id/profile_editor_birthdate" android:layout_alignRight="@id/profile_editor_birthdate" android:layout_alignBottom="@id/profile_editor_birthdate" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip">
            <de.cisha.android.ui.patterns.input.CustomEditText android:id="@id/profile_editor_sex" custom:hintText="@string/profile_editor_hint_sex" style="@style/CustomInputStyle" />
            <View android:id="@id/profile_editor_sex_click_overlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignLeft="@id/profile_editor_sex" android:layout_alignTop="@id/profile_editor_sex" android:layout_alignRight="@id/profile_editor_sex" android:layout_alignBottom="@id/profile_editor_sex" />
        </RelativeLayout>
        <de.cisha.android.ui.patterns.text.CustomTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile_editor_section_title_account_type" android:drawableLeft="@drawable/profile_editor_ico_account" custom:textstyle="list_item_title" style="@style/profile_editior_header_view_style" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/profile_editor_account_type" />
        <de.cisha.android.ui.patterns.text.CustomTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile_editor_section_title_privacy" android:drawableLeft="@drawable/profile_editor_ico_privacy" custom:textstyle="list_item_title" style="@style/profile_editior_header_view_style" />
        <de.cisha.android.board.profile.view.PrivacySettingView android:id="@id/profile_editor_privacy_settings_view" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/profile_analytics_setting" />
    </LinearLayout>
</ScrollView>