<?xml version="1.0" encoding="utf-8"?>
<de.cisha.android.ui.patterns.navigationbar.MenuBar android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <de.cisha.android.ui.patterns.navigationbar.MenuBarItem android:id="@id/setup_board_navigation_bar_item_castling" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:icon_drawable_disabled="@drawable/setup_castling_inactive" custom:icon_drawable_selected="@drawable/setup_castling_active" custom:icon_drawable_usual="@drawable/setup_castling" custom:selectable="false" custom:selection_group="1" custom:text="@string/setup_board_menu_bar_castling" />
    <de.cisha.android.ui.patterns.navigationbar.MenuBarItem android:id="@id/setup_board_navigation_bar_item_active_color" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:icon_drawable_selected="@drawable/setup_active_color_active" custom:icon_drawable_usual="@drawable/setup_active_color" custom:selectable="false" custom:selection_group="1" custom:text="@string/setup_board_menu_bar_active_color" />
    <de.cisha.android.ui.patterns.navigationbar.MenuBarItem android:id="@id/setup_board_navigation_bar_item_enpassant" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:icon_drawable_disabled="@drawable/setup_enpassant_inactive" custom:icon_drawable_selected="@drawable/setup_enpassant_active" custom:icon_drawable_usual="@drawable/setup_enpassant" custom:selectable="false" custom:selection_group="1" custom:text="@string/setup_board_menu_bar_en_passant" />
    <de.cisha.android.ui.patterns.navigationbar.MenuBarItem android:id="@id/setup_board_navigation_bar_item_reset" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:icon_drawable_selected="@drawable/analysis_reset_ico_active" custom:icon_drawable_usual="@drawable/analysis_reset_ico" custom:selectable="false" custom:selection_group="1" custom:text="@string/setup_board_menu_bar_reset_starting_position" />
    <de.cisha.android.ui.patterns.navigationbar.MenuBarItem android:id="@id/setup_board_navigation_bar_item_clear" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:icon_drawable_selected="@drawable/setup_clear_active" custom:icon_drawable_usual="@drawable/setup_clear" custom:selectable="false" custom:selection_group="1" custom:text="@string/setup_board_menu_bar_clear_board" />
</de.cisha.android.ui.patterns.navigationbar.MenuBar>