<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="250.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:background="@drawable/playzone_after_game_line_dialog" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" />
    <de.cisha.android.ui.patterns.input.CustomEditPassword android:id="@id/change_password_current" android:layout_width="fill_parent" android:layout_height="wrap_content" app:hintText="@string/change_password_popup_current_password_field" />
    <de.cisha.android.ui.patterns.input.CustomEditPassword android:id="@id/change_password_new" android:layout_width="fill_parent" android:layout_height="wrap_content" app:hintText="@string/change_password_popup_new_password_field" />
    <de.cisha.android.ui.patterns.input.CustomEditPassword android:id="@id/change_password_repeat" android:layout_width="fill_parent" android:layout_height="wrap_content" app:hintText="@string/change_password_popup_confirm_password_field" />
    <de.cisha.android.board.profile.view.FormErrorView android:id="@id/change_password_confirmation_failed" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <include android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" layout="@layout/cancel_and_save" />
</LinearLayout>